refactor: a few usages of newer Collections APIs